"Fixed admin/user tab spacing"

--- a/Fontend/src/components/NavBar/NavBar.css
+++ b/Fontend/src/components/NavBar/NavBar.css
@@ -10,7 +10,7 @@
 .navbar a {
     margin: auto;
     float: left;
-    padding: 5px;
+    padding: 10px;
     color: white;
     text-decoration: none;
     font-size: 17px;
